tests/NormalTests/paczka1/fuzzy1/18815755.err
Error in line 2: spQyq A727 98,7
Error in line 17: c6T A727 69,09
Error in line 16: c6T A727 72,8
Error in line 23: spQyq S196 22,3
Error in line 34: spQyq A834 58,0
